# drl

./: CMakeLists.txt  README.md
benchmark/: query_doc_list_idx_bm.cpp  run_bm.sh  run_multi_bm.sh
benchmark/r_index/: r_index.hpp
cmake/: ConfigGBenchmark.cmake
include/drl/: construct_da.h  dl_basic_scheme.h  dl_sampled_tree_scheme.h  doclist.h  grammar_index.h  helper.h  io.h  merge_sets.h  pdl_suffix_tree.h  pdloda.h  pdlrp.h  pdltree.h  rle.h  sa.h  utils.h
src/: doclist.cpp  pdlrp.cpp  pdltree.cpp  utils.cpp
test/: construct_da_test.cpp  da_construct_test.cpp  merge_sets_test.cpp  pdloda_test.cpp  rle_test.cpp
tool/: build_dl_idx.cpp  build_docs_list.cpp  expand_doc_array.cpp
